# cheviot-utils

./: .gitignore  README.md
bsdutils/: Makefile.in  configure  configure.ac  readme.md
bsdutils/src/: Makefile.am  Makefile.in
bsdutils/src/getty/: Makefile.am  Makefile.in  main.c  subr.c
bsdutils/src/hexdump/: Makefile.am  Makefile.in
bsdutils/src/lgetty/: Makefile.am  Makefile.in  main.c
bsdutils/src/login/: Makefile.am  Makefile.in  common.c  copyrightstr.c  login.c  login.cat1
bsdutils/src/logname/: Makefile.am  Makefile.in  logname  logname.cat1
bsdutils/src/pwd_mkdb/: Makefile.am  Makefile.in  pwd_mkdb.c
tests/: Makefile.am  Makefile.in  configure  configure.ac
tests/chartest/: Makefile.am  Makefile.in  main.c
tests/clock/: Makefile.am  Makefile.in
tests/readdir/: Makefile.am  Makefile.in  main.c
tests/readfile/: Makefile.am  Makefile.in  main.c
tests/threadtest/: Makefile.am  Makefile.in  main.c
utils/: Makefile.am  Makefile.in  configure  configure.ac
utils/chartest/: Makefile.in
utils/clock/: Makefile.am  main.c
utils/init/: Makefile.am  Makefile.in  init.h  main.c  startup.cfg
utils/readfile/: Makefile.am  Makefile.in  main.c
utils/say/: Makefile.am  Makefile.in  main.c
utils/setgpio/: Makefile.am  Makefile.in  main.c
utils/shutdown/: Makefile.am  Makefile.in  main.c
utils/top/: Makefile.am  Makefile.in  main.c
